Encode in base64 the value of SERIALIZED_TEST_APP_MODEL when using Maven to avoid escaping issues